-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.2
-
None
-
-
a34e81ab8be6445877e040b1afb85deeaa725f86 (qt/qtbase/dev) 23453c30084d09d7325e113bbc3d0637c51cb3e7 (qt/qtwayland/dev)
VirtualKeyboard, when used as part of QtWayland Compositor, fails to send Enter key event to application.
The issue is in
QWaylandXkb::toKeysym
where it falls to the wrong code path because the QKeyEvent::text() for this key event is not empty. On the client side it is then received as QKeyEvent(key = 0. text = "\n") - the key code is lost.
Attached is a quick patch that fixes this issue.
| For Gerrit Dashboard: QTBUG-71301 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 247324,14 | platformsupport/input: add xkbcommon utilities lib | 5.13 | qt/qtbase | Status: MERGED | -2 | 0 |
| 248386,24 | drop qwaylandxkb and share the logic with X11 | 5.13 | qt/qtwayland | Status: MERGED | -2 | 0 |