src/platformsupport/input/libinput/qlibinputkeyboard_p.h
@@ -79,10 +79,9 @@ private:
     int keysymToQtKey(xkb_keysym_t key) const;
     int keysymToQtKey(xkb_keysym_t keysym, Qt::KeyboardModifiers *modifiers, const QString &text) const;
 
-    xkb_context *m_ctx;
-    xkb_keymap *m_keymap;
-    xkb_state *m_state;
-    xkb_mod_index_t m_modindex[4];
+    xkb_context *m_ctx = nullptr;
+    xkb_keymap *m_keymap = nullptr;
+    xkb_state *m_state = nullptr;
 
     QTimer m_repeatTimer;
 
@@ -95,7 +94,6 @@ private:
         QString unicodeText;
         int repeatCount;
     } m_repeatData;
-    Qt::KeyboardModifiers m_mods;
 #endif
 };
 
