sync.profile
@@ -18,6 +18,7 @@
     "QtEventDispatcherSupport" => "$basedir/src/platformsupport/eventdispatchers",
     "QtFontDatabaseSupport" => "$basedir/src/platformsupport/fontdatabases",
     "QtInputSupport" => "$basedir/src/platformsupport/input",
+    "QtXkbCommonSupport" => "$basedir/src/platformsupport/input/xkbcommon",
     "QtPlatformCompositorSupport" => "$basedir/src/platformsupport/platformcompositor",
     "QtServiceSupport" => "$basedir/src/platformsupport/services",
     "QtThemeSupport" => "$basedir/src/platformsupport/themes",
